--- a/CustomElements/CustomExpander.xaml
+++ b/CustomElements/CustomExpander.xaml
@@ -8,19 +8,20 @@
              MinHeight="60" MinWidth="150" Width="Auto">
     <Grid>
         <TextBox Name="Word" FontSize="20" Text=" " 
-                           Margin="15,10,15,0" FontWeight="DemiBold" 
+                           Margin="15,0,15,0" FontWeight="DemiBold" 
                            BorderThickness="0"
                            Foreground="#FAFAF5" Background="Transparent"></TextBox>
-        <Expander Name="ExpanderTitle" Header="Word" FontSize="20" 
-                           Margin="15,10,15,0" FontWeight="DemiBold" 
+        <Border Background="Transparent"
+                    CornerRadius="20, 20, 20, 20" VerticalAlignment="Top">
+            <Expander Name="ExpanderTitle" Header="Word" FontSize="20" 
+                           Margin="0,10,0,10" FontWeight="DemiBold" 
                            BorderThickness="0"
                            Foreground="#FAFAF5" Background="Transparent">
-            <StackPanel Name="ExpanderStackPanel">
-                <TextBox Name="A" FontSize="20" Text=" " 
-                           Margin="15,10,15,0" FontWeight="DemiBold" 
-                           BorderThickness="0"
-                           Foreground="#FAFAF5" Background="Transparent"></TextBox>
-            </StackPanel>
-        </Expander>
+                <StackPanel Name="ExpanderStackPanel">
+
+                </StackPanel>
+            </Expander>
+        </Border>
+
     </Grid>
 </UserControl>
